// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/sidebar/sidebar_channel/sidebar_channel_menu should match snapshot and contain correct buttons 1`] = `
<Connect(SidebarMenu)
  ariaLabel="Channel Menu"
  buttonAriaLabel="Channel Menu"
  id="SidebarChannelMenu-channel_id"
  isMenuOpen={true}
  onToggleMenu={[Function]}
  refCallback={[Function]}
  tabIndex={0}
  tooltipText="Channel options"
>
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="icon-star-outline"
        />
      }
      id="favorite-channel_id"
      onClick={[Function]}
      show={true}
      text="Favorite"
    />
    <MenuItemAction
      icon={
        <i
          className="icon-bell-outline"
        />
      }
      id="mute-channel_id"
      onClick={[Function]}
      show={true}
      text="Mute Channel"
    />
  </MenuGroup>
  <CategoryMenuItems
    channel={
      Object {
        "create_at": 0,
        "creator_id": "id",
        "delete_at": 0,
        "display_name": "name",
        "group_constrained": false,
        "header": "header",
        "id": "channel_id",
        "last_post_at": 0,
        "name": "DN",
        "purpose": "purpose",
        "scheme_id": "id",
        "team_id": "team_id",
        "type": "O",
        "update_at": 0,
      }
    }
    location="sidebar"
    openUp={false}
  />
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="icon-link-variant"
        />
      }
      id="copyLink-channel_id"
      onClick={[Function]}
      show={true}
      text="Copy Link"
    />
    <MenuItemAction
      icon={
        <i
          className="icon-account-outline"
        />
      }
      id="addMembers-channel_id"
      onClick={[Function]}
      show={true}
      text="Add Members"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="icon-close"
        />
      }
      id="leave-channel_id"
      onClick={[Function]}
      show={true}
      text="Leave Channel"
    />
  </MenuGroup>
</Connect(SidebarMenu)>
`;

exports[`components/sidebar/sidebar_channel/sidebar_channel_menu should match snapshot of rendered items 1`] = `
<React.Fragment>
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="icon-star-outline"
        />
      }
      id="favorite-channel_id"
      onClick={[Function]}
      show={true}
      text="Favorite"
    />
    <MenuItemAction
      icon={
        <i
          className="icon-bell-outline"
        />
      }
      id="mute-channel_id"
      onClick={[Function]}
      show={true}
      text="Mute Channel"
    />
  </MenuGroup>
  <CategoryMenuItems
    channel={
      Object {
        "create_at": 0,
        "creator_id": "id",
        "delete_at": 0,
        "display_name": "name",
        "group_constrained": false,
        "header": "header",
        "id": "channel_id",
        "last_post_at": 0,
        "name": "DN",
        "purpose": "purpose",
        "scheme_id": "id",
        "team_id": "team_id",
        "type": "O",
        "update_at": 0,
      }
    }
    location="sidebar"
    openUp={false}
  />
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="icon-link-variant"
        />
      }
      id="copyLink-channel_id"
      onClick={[Function]}
      show={true}
      text="Copy Link"
    />
    <MenuItemAction
      icon={
        <i
          className="icon-account-outline"
        />
      }
      id="addMembers-channel_id"
      onClick={[Function]}
      show={true}
      text="Add Members"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="icon-close"
        />
      }
      id="leave-channel_id"
      onClick={[Function]}
      show={true}
      text="Leave Channel"
    />
  </MenuGroup>
</React.Fragment>
`;

exports[`components/sidebar/sidebar_channel/sidebar_channel_menu should match snapshot of rendered items when multiselecting channels - DM channels and public channels category 1`] = `
<React.Fragment>
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="icon-star-outline"
        />
      }
      id="favorite-channel_id"
      onClick={[Function]}
      show={true}
      text="Favorite"
    />
    <MenuItemAction
      icon={
        <i
          className="icon-bell-outline"
        />
      }
      id="mute-channel_id"
      onClick={[Function]}
      show={true}
      text="Mute Channel"
    />
  </MenuGroup>
  <CategoryMenuItems
    channel={
      Object {
        "create_at": 0,
        "creator_id": "id",
        "delete_at": 0,
        "display_name": "name",
        "group_constrained": false,
        "header": "header",
        "id": "channel_id",
        "last_post_at": 0,
        "name": "DN",
        "purpose": "purpose",
        "scheme_id": "id",
        "team_id": "team_id",
        "type": "O",
        "update_at": 0,
      }
    }
    location="sidebar"
    openUp={false}
  />
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="icon-link-variant"
        />
      }
      id="copyLink-channel_id"
      onClick={[Function]}
      show={true}
      text="Copy Link"
    />
    <MenuItemAction
      icon={
        <i
          className="icon-account-outline"
        />
      }
      id="addMembers-channel_id"
      onClick={[Function]}
      show={true}
      text="Add Members"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="icon-close"
        />
      }
      id="leave-channel_id"
      onClick={[Function]}
      show={true}
      text="Leave Channel"
    />
  </MenuGroup>
</React.Fragment>
`;

exports[`components/sidebar/sidebar_channel/sidebar_channel_menu should match snapshot of rendered items when multiselecting channels - public channels and DM category 1`] = `
<React.Fragment>
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="icon-star-outline"
        />
      }
      id="favorite-channel_id"
      onClick={[Function]}
      show={true}
      text="Favorite"
    />
    <MenuItemAction
      icon={
        <i
          className="icon-bell-outline"
        />
      }
      id="mute-channel_id"
      onClick={[Function]}
      show={true}
      text="Mute Channel"
    />
  </MenuGroup>
  <CategoryMenuItems
    channel={
      Object {
        "create_at": 0,
        "creator_id": "id",
        "delete_at": 0,
        "display_name": "name",
        "group_constrained": false,
        "header": "header",
        "id": "channel_id",
        "last_post_at": 0,
        "name": "DN",
        "purpose": "purpose",
        "scheme_id": "id",
        "team_id": "team_id",
        "type": "O",
        "update_at": 0,
      }
    }
    location="sidebar"
    openUp={false}
  />
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="icon-link-variant"
        />
      }
      id="copyLink-channel_id"
      onClick={[Function]}
      show={true}
      text="Copy Link"
    />
    <MenuItemAction
      icon={
        <i
          className="icon-account-outline"
        />
      }
      id="addMembers-channel_id"
      onClick={[Function]}
      show={true}
      text="Add Members"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="icon-close"
        />
      }
      id="leave-channel_id"
      onClick={[Function]}
      show={true}
      text="Leave Channel"
    />
  </MenuGroup>
</React.Fragment>
`;

exports[`components/sidebar/sidebar_channel/sidebar_channel_menu should match snapshot when channel is DM 1`] = `
<Connect(SidebarMenu)
  ariaLabel="Channel Menu"
  buttonAriaLabel="Channel Menu"
  id="SidebarChannelMenu-channel_id"
  isMenuOpen={true}
  onToggleMenu={[Function]}
  refCallback={[Function]}
  tabIndex={0}
  tooltipText="Channel options"
>
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="icon-star-outline"
        />
      }
      id="favorite-channel_id"
      onClick={[Function]}
      show={true}
      text="Favorite"
    />
    <MenuItemAction
      icon={
        <i
          className="icon-bell-outline"
        />
      }
      id="mute-channel_id"
      onClick={[Function]}
      show={true}
      text="Mute Conversation"
    />
  </MenuGroup>
  <CategoryMenuItems
    channel={
      Object {
        "create_at": 0,
        "creator_id": "id",
        "delete_at": 0,
        "display_name": "name",
        "group_constrained": false,
        "header": "header",
        "id": "channel_id",
        "last_post_at": 0,
        "name": "DN",
        "purpose": "purpose",
        "scheme_id": "id",
        "team_id": "team_id",
        "type": "D",
        "update_at": 0,
      }
    }
    location="sidebar"
    openUp={false}
  />
  <MenuGroup />
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="icon-close"
        />
      }
      id="leave-channel_id"
      onClick={[Function]}
      show={true}
      text="Close Conversation"
    />
  </MenuGroup>
</Connect(SidebarMenu)>
`;

exports[`components/sidebar/sidebar_channel/sidebar_channel_menu should match snapshot when channel is Town Square 1`] = `
<Connect(SidebarMenu)
  ariaLabel="Channel Menu"
  buttonAriaLabel="Channel Menu"
  id="SidebarChannelMenu-channel_id"
  isMenuOpen={true}
  onToggleMenu={[Function]}
  refCallback={[Function]}
  tabIndex={0}
  tooltipText="Channel options"
>
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="icon-star-outline"
        />
      }
      id="favorite-channel_id"
      onClick={[Function]}
      show={true}
      text="Favorite"
    />
    <MenuItemAction
      icon={
        <i
          className="icon-bell-outline"
        />
      }
      id="mute-channel_id"
      onClick={[Function]}
      show={true}
      text="Mute Channel"
    />
  </MenuGroup>
  <CategoryMenuItems
    channel={
      Object {
        "create_at": 0,
        "creator_id": "id",
        "delete_at": 0,
        "display_name": "name",
        "group_constrained": false,
        "header": "header",
        "id": "channel_id",
        "last_post_at": 0,
        "name": "town-square",
        "purpose": "purpose",
        "scheme_id": "id",
        "team_id": "team_id",
        "type": "O",
        "update_at": 0,
      }
    }
    location="sidebar"
    openUp={false}
  />
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="icon-link-variant"
        />
      }
      id="copyLink-channel_id"
      onClick={[Function]}
      show={true}
      text="Copy Link"
    />
    <MenuItemAction
      icon={
        <i
          className="icon-account-outline"
        />
      }
      id="addMembers-channel_id"
      onClick={[Function]}
      show={true}
      text="Add Members"
    />
  </MenuGroup>
</Connect(SidebarMenu)>
`;

exports[`components/sidebar/sidebar_channel/sidebar_channel_menu should match snapshot when channel is favorite 1`] = `
<Connect(SidebarMenu)
  ariaLabel="Channel Menu"
  buttonAriaLabel="Channel Menu"
  id="SidebarChannelMenu-channel_id"
  isMenuOpen={true}
  onToggleMenu={[Function]}
  refCallback={[Function]}
  tabIndex={0}
  tooltipText="Channel options"
>
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="icon-star"
        />
      }
      id="unfavorite-channel_id"
      onClick={[Function]}
      show={true}
      text="Unfavorite"
    />
    <MenuItemAction
      icon={
        <i
          className="icon-bell-outline"
        />
      }
      id="mute-channel_id"
      onClick={[Function]}
      show={true}
      text="Mute Channel"
    />
  </MenuGroup>
  <CategoryMenuItems
    channel={
      Object {
        "create_at": 0,
        "creator_id": "id",
        "delete_at": 0,
        "display_name": "name",
        "group_constrained": false,
        "header": "header",
        "id": "channel_id",
        "last_post_at": 0,
        "name": "DN",
        "purpose": "purpose",
        "scheme_id": "id",
        "team_id": "team_id",
        "type": "O",
        "update_at": 0,
      }
    }
    location="sidebar"
    openUp={false}
  />
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="icon-link-variant"
        />
      }
      id="copyLink-channel_id"
      onClick={[Function]}
      show={true}
      text="Copy Link"
    />
    <MenuItemAction
      icon={
        <i
          className="icon-account-outline"
        />
      }
      id="addMembers-channel_id"
      onClick={[Function]}
      show={true}
      text="Add Members"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="icon-close"
        />
      }
      id="leave-channel_id"
      onClick={[Function]}
      show={true}
      text="Leave Channel"
    />
  </MenuGroup>
</Connect(SidebarMenu)>
`;

exports[`components/sidebar/sidebar_channel/sidebar_channel_menu should match snapshot when channel is muted 1`] = `
<Connect(SidebarMenu)
  ariaLabel="Channel Menu"
  buttonAriaLabel="Channel Menu"
  id="SidebarChannelMenu-channel_id"
  isMenuOpen={true}
  onToggleMenu={[Function]}
  refCallback={[Function]}
  tabIndex={0}
  tooltipText="Channel options"
>
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="icon-star-outline"
        />
      }
      id="favorite-channel_id"
      onClick={[Function]}
      show={true}
      text="Favorite"
    />
    <MenuItemAction
      icon={
        <i
          className="icon-bell-off-outline"
        />
      }
      id="unmute-channel_id"
      onClick={[Function]}
      show={true}
      text="Unmute Channel"
    />
  </MenuGroup>
  <CategoryMenuItems
    channel={
      Object {
        "create_at": 0,
        "creator_id": "id",
        "delete_at": 0,
        "display_name": "name",
        "group_constrained": false,
        "header": "header",
        "id": "channel_id",
        "last_post_at": 0,
        "name": "DN",
        "purpose": "purpose",
        "scheme_id": "id",
        "team_id": "team_id",
        "type": "O",
        "update_at": 0,
      }
    }
    location="sidebar"
    openUp={false}
  />
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="icon-link-variant"
        />
      }
      id="copyLink-channel_id"
      onClick={[Function]}
      show={true}
      text="Copy Link"
    />
    <MenuItemAction
      icon={
        <i
          className="icon-account-outline"
        />
      }
      id="addMembers-channel_id"
      onClick={[Function]}
      show={true}
      text="Add Members"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="icon-close"
        />
      }
      id="leave-channel_id"
      onClick={[Function]}
      show={true}
      text="Leave Channel"
    />
  </MenuGroup>
</Connect(SidebarMenu)>
`;

exports[`components/sidebar/sidebar_channel/sidebar_channel_menu should match snapshot when channel is private 1`] = `
<Connect(SidebarMenu)
  ariaLabel="Channel Menu"
  buttonAriaLabel="Channel Menu"
  id="SidebarChannelMenu-channel_id"
  isMenuOpen={true}
  onToggleMenu={[Function]}
  refCallback={[Function]}
  tabIndex={0}
  tooltipText="Channel options"
>
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="icon-star-outline"
        />
      }
      id="favorite-channel_id"
      onClick={[Function]}
      show={true}
      text="Favorite"
    />
    <MenuItemAction
      icon={
        <i
          className="icon-bell-outline"
        />
      }
      id="mute-channel_id"
      onClick={[Function]}
      show={true}
      text="Mute Channel"
    />
  </MenuGroup>
  <CategoryMenuItems
    channel={
      Object {
        "create_at": 0,
        "creator_id": "id",
        "delete_at": 0,
        "display_name": "name",
        "group_constrained": false,
        "header": "header",
        "id": "channel_id",
        "last_post_at": 0,
        "name": "DN",
        "purpose": "purpose",
        "scheme_id": "id",
        "team_id": "team_id",
        "type": "P",
        "update_at": 0,
      }
    }
    location="sidebar"
    openUp={false}
  />
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="icon-link-variant"
        />
      }
      id="copyLink-channel_id"
      onClick={[Function]}
      show={true}
      text="Copy Link"
    />
    <MenuItemAction
      icon={
        <i
          className="icon-account-outline"
        />
      }
      id="addMembers-channel_id"
      onClick={[Function]}
      show={true}
      text="Add Members"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="icon-close"
        />
      }
      id="leave-channel_id"
      onClick={[Function]}
      show={true}
      text="Leave Channel"
    />
  </MenuGroup>
</Connect(SidebarMenu)>
`;

exports[`components/sidebar/sidebar_channel/sidebar_channel_menu should match snapshot when channel is unread 1`] = `
<Connect(SidebarMenu)
  ariaLabel="Channel Menu"
  buttonAriaLabel="Channel Menu"
  id="SidebarChannelMenu-channel_id"
  isMenuOpen={true}
  onToggleMenu={[Function]}
  refCallback={[Function]}
  tabIndex={0}
  tooltipText="Channel options"
>
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="icon-mark-as-unread"
        />
      }
      id="markAsRead-channel_id"
      onClick={[Function]}
      show={true}
      text="Mark as Read"
    />
    <MenuItemAction
      icon={
        <i
          className="icon-star-outline"
        />
      }
      id="favorite-channel_id"
      onClick={[Function]}
      show={true}
      text="Favorite"
    />
    <MenuItemAction
      icon={
        <i
          className="icon-bell-outline"
        />
      }
      id="mute-channel_id"
      onClick={[Function]}
      show={true}
      text="Mute Channel"
    />
  </MenuGroup>
  <CategoryMenuItems
    channel={
      Object {
        "create_at": 0,
        "creator_id": "id",
        "delete_at": 0,
        "display_name": "name",
        "group_constrained": false,
        "header": "header",
        "id": "channel_id",
        "last_post_at": 0,
        "name": "DN",
        "purpose": "purpose",
        "scheme_id": "id",
        "team_id": "team_id",
        "type": "O",
        "update_at": 0,
      }
    }
    location="sidebar"
    openUp={false}
  />
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="icon-link-variant"
        />
      }
      id="copyLink-channel_id"
      onClick={[Function]}
      show={true}
      text="Copy Link"
    />
    <MenuItemAction
      icon={
        <i
          className="icon-account-outline"
        />
      }
      id="addMembers-channel_id"
      onClick={[Function]}
      show={true}
      text="Add Members"
    />
  </MenuGroup>
  <MenuGroup>
    <MenuItemAction
      icon={
        <i
          className="icon-close"
        />
      }
      id="leave-channel_id"
      onClick={[Function]}
      show={true}
      text="Leave Channel"
    />
  </MenuGroup>
</Connect(SidebarMenu)>
`;
